fixed nav bar alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,10 @@ a:hover {
   color: crimson;
 }
 
+nav {
+  text-align: center;
+}
+
 .btn {
   background-color: darkred;
   border: 0;
